# tns-convert

./: .gitignore  CLAUDE.md  Guia_Costo_Capital_Nspire.tns  LICENSE  README.md  exel.tns  leyes.tns  pyproject.toml  tixc_decode.py  tixc_encode.py  tns_converter_app.py  tns_method13.py  tns_outer_parse.py  tns_to_xml.py  tnstools.py
.github/workflows/: build.yml
docs/: REVERSE_NOTES.md
tests/: README.md
