[project]
name = "tnstools"
version = "0.1.0"
description = "Pure Python TI-Nspire .tns XML decoder and method 13/TIXC encoder"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "tnstools contributors" }
]
dependencies = [
  "pycryptodome>=3.20"
]

[project.scripts]
tnstools = "tnstools:main"
tns-to-xml = "tns_to_xml:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
